--- a/app/assets/views/folders.xml
+++ b/app/assets/views/folders.xml
@@ -39,9 +39,11 @@
         </w>
         <w id="view-folders-content-wrapper" class="view-content-wrapper">
           <w id="view-folders-content" class="view-content full-height">
-            <w id="tip-empty-folder" class="floating center middle aligned icon message">
-              <w type="icon" name="folder-multiple-image"></w>
-              <w type="textview-i18n" class="text" data-i18n-key="folders.message.empty">未找到可读取的图片或文件夹</w>
+            <w id="tip-empty-folder" class="result">
+              <w class="result-inner">
+                <icon name="folder-multiple-image" class="result-icon" />
+                <textview-i18n class="text result-title" data-i18n-key="folders.message.empty">未找到可读取的图片或文件夹</textview-i18n>
+              </w>
             </w>
             <w type="thumbview" id="current-file-list" class="scrolllayer file-list"></w>
           </w>
