--- a/src/scss/components/_dialog.scss
+++ b/src/scss/components/_dialog.scss
@@ -6,15 +6,16 @@
 	height: 100%;
 	position: absolute;
 	background-color: rgba(0,0,0,0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .dialog-content {
 	width: 100%;
 	max-width: 450px;
 	margin: 0 auto;
 	padding: 10px;
-	vertical-align: middle;
 	background-color: #fff;
-	box-sizing: border-box;
 
 	.text-block {
 		margin-bottom: 15px;
