--- a/src/scss/views/_browser.scss
+++ b/src/scss/views/_browser.scss
@@ -78,9 +78,11 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		display: block;
 		position: absolute;
 		box-sizing: border-box;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		border: 2px solid rgba(0,0,0,0);
 
 		.icon.tip {
