--- a/src/scss/views/_picture.scss
+++ b/src/scss/views/_picture.scss
@@ -34,10 +34,17 @@
 		margin-left: 5px;
 	}
 	.zoom-btn-group {
-		margin: 0 auto;
-		bottom: 10px;
-		position: absolute;
+		flex: none;
+		display: inline-block;
 		border: 1px solid #eee;
+	}
+	.zoom-btn-group-wrapper {
+		left: 0;
+		width: 100%;
+		bottom: 10px;
+		display: flex;
+		justify-content: center;
+		position: absolute;
 	}
 	.icon-btn:first-child,
 	.zoom-btn-group .icon-btn {
@@ -66,6 +73,23 @@
 			left: 100%;
 		}
 	}
+	.picture-message {
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		position: absolute;
+		align-items: center;
+		flex-direction: column;
+		justify-content: center;
+		pointer-events: none;
+
+		.message {
+			display: inline-block;
+			flex: 0 0 auto;
+		}
+	}
 	.icon-btn .icon {
 		color: #444;
 		width: 24px;
@@ -88,9 +112,9 @@
 		margin-left: 8px;
 	}
 	.picture-switch-btn {
-		margin: 0;
+		top: 50%;
+		margin: -12px 0 0 0;
 		position: absolute;
-		vertical-align: middle;
 		background-color: rgba(0,0,0,0.5);
 	}
 	.picture-switch-btn.prev {
@@ -102,10 +126,11 @@
 }
 
 #picture-info-panel {
-	starrating .icon-star {
+	rate .icon-star {
 		color: $orange;
 	}
 }
+
 .window-side-panel {
 	top: 0;
 	left: 0;
