--- a/src/scss/views/_search.scss
+++ b/src/scss/views/_search.scss
@@ -29,7 +29,7 @@
 	width: 100%;
 	height: 100%;
 	display: none;
-	position: absolute;
+	align-items: center;
 	box-sizing: border-box;
 	background-color: rgba(0,0,0,0.1);
 }
@@ -37,30 +37,20 @@
 	color: #fff;
 	width: 100%;
 	font-size: 48px;
-	position: absolute;
 	text-align: center;
-	vertical-align: middle;
 }
 .tag-thumb:hover .tag-thumb-dimmer {
-	display: block;
+	display: flex;
 }
 .tag-thumb.selected {
 	.tag-thumb-checkbox {
 		color: $primary-color;
 	}
 	.tag-thumb-dimmer {
-		display: block;
+		display: flex;
 		background-color: rgba(0,0,0,0.1);
 	}
 }
-
-$search-input-group-padding-y: 5px;
-$search-input-line-height: $font-size * 1.5;
-$search-input-padding-x: 8px;
-$search-input-padding-y: ($view-navbar-line-height - 
-	($search-input-group-padding-y + 1px) * 2 - $search-input-line-height) / 2;
-$search-input-icon-width: 24px;
-$search-input-icon-height: $search-input-line-height;
 
 .search-input-group {
 	width: 40%;
